--- a/config/app.yml
+++ b/config/app.yml
@@ -1,5 +1,8 @@
 mysql:
   dns: root:root@tcp(127.0.0.1:3306)/im_project?charset=utf8mb4&parseTime=True&loc=Local
+port:
+  server: ":8080"
+  udp: 3000
 redis:
   addr: "127.0.0.1:6379"
   password: ""
